--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 	// Get the data
-	d3.csv("https://raw.githubusercontent.com/nalamdt/DV-Noor/master/data/epa2015_final.csv", function(error, data) {
+	d3.csv("https://github.com/nalamDT/DV-Final/blob/master/data/epa2015_final.csv", function(error, data) {
 	  if (error) throw error;
 
 	  data.forEach(function(d) {
