--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div id="container">
-    <h1>CO2 Emissions vs Vehicle Horsepower. Should your next vehicle be less powerful?</h1>
+    <h1>Population vs Income Median Below 50 </h1>
     <h2 class="subtitle">Visualization is based on data from the Environment Protection Agency of 4,411 vehicles manufactured in 2015.</h2>
     <div id="vis-nav">
       <a href="#" id="step1" class="step-link active">Viz-Scene 1</a>
@@ -27,7 +27,7 @@
       <div id="annotation-steps">
         <div class="annotation-step" id="step1-annotation" style="display:block;">
           <div class="annotation" id="step1-high-annotation" >
-            <h4>As horsepower increases C02 emissions increase for all vehicle types.</h4>
+            <h4>As Income Median Below 50 increases C02 emissions increase for all vehicle types.</h4>
                 		  
           </div>
          </div>
@@ -93,17 +93,17 @@
 	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 	// Get the data
-	d3.csv("https://raw.githubusercontent.com/nalamDT/DV-Final/master/data/epa2015_final.csv", function(error, data) {
+	d3.csv("https://raw.githubusercontent.com/nalamDT/DV-Final/master/data/data_WDI.csv", function(error, data) {
 	  if (error) throw error;
 
 	  data.forEach(function(d) {
-	    d.CO2 = +d.CO2;
-	    d.horse = +d.horse;
+	    d.Income = +d.Income;
+	    d.Population = +d.Population;
 	  });
 
 	// Scale the range of the data
-	  x.domain(d3.extent(data, function(d) { return d.horse; })).nice();
-	  y.domain(d3.extent(data, function(d) { return d.CO2; })).nice();
+	  x.domain(d3.extent(data, function(d) { return d.Income; })).nice();
+	  y.domain(d3.extent(data, function(d) { return d.Population; })).nice();
 
 	// Add the X Axis
 	  svg.append("g")
@@ -115,7 +115,7 @@
 	      .attr("x", width)
 	      .attr("y", -6)
 	      .style("text-anchor", "end")
-	      .text("Rated Horsepower (foot-pounds per second)");
+	      .text("Income Median Below 50 ");
 
 	// Add the Y Axis
 	  svg.append("g")
@@ -127,7 +127,7 @@
 	      .attr("y", 6)
 	      .attr("dy", ".71em")
 	      .style("text-anchor", "end")
-	      .text("CO2 Emissions (grams per mile)")
+	      .text("Population")
 
 	// Add the Scatterplot
 	  svg.selectAll(".dot")
@@ -135,13 +135,13 @@
 	    .enter().append("circle")
 	      .attr("class", "dot")
 	      .attr("r", 3.5)
-	      .attr("cx", function(d) { return x(d.horse); })
-	      .attr("cy", function(d) { return y(d.CO2); })
-	      .style("fill", function(d) { return color(d.type); })
+	      .attr("cx", function(d) { return x(d.Income); })
+	      .attr("cy", function(d) { return y(d.Population); })
+	      .style("fill", function(d) { return color(d.Country); })
 	      .on("mouseover", function(d){
         	  d3.selectAll('.dot')
             	   .filter(function(dot){ 
-                    return (dot.type != d.type) 
+                    return (dot.type != d.Country) 
                    })
                    .transition()
                    .style("opacity", 0.01)
@@ -149,7 +149,7 @@
               .on("mouseout", function(d){
                d3.selectAll('.dot')
                 .filter(function(dot){ 
-                 return (dot.type != d.type) 
+                 return (dot.type != d.Country) 
                 })
                 .transition()
                 .style("opacity", 1)
