--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="annotation-steps">
         <div class="annotation-step" id="step1-annotation" style="display:block;">
           <div class="annotation" id="step1-high-annotation" >
-            <h4>As Income Median Below 50 increases C02 emissions increase for all vehicle types.</h4>
+            <h4>As Income Median Below 50 increases with population.</h4>
                 		  
           </div>
          </div>
