--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="container">
     <h1>Population vs Income Median Below 50 </h1>
-    <h2 class="subtitle">Visualization is based on data from the Environment Protection Agency of 4,411 vehicles manufactured in 2015.</h2>
+    <h2 class="subtitle">Visualization is based on data from the WDI on population and median income</h2>
     <div id="vis-nav">
       <a href="#" id="step1" class="step-link active">Viz-Scene 1</a>
       <a href="#" id="step2" class="step-link">Viz-Scene 2</a>
@@ -33,13 +33,13 @@
          </div>
         <div class="annotation-step" id="step2-annotation">
           <div class="annotation" id="step2-high-annotation" >
-	    <h4>Mouseover the data to see the individual trends for Cars, Trucks or SUVs.</h4>
+	    <h4>Mouseover the data to see the individual trends for different income levels</h4>
 				
           </div>
         </div>
 	<div class="annotation-step" id="step3-annotation">
           <div class="annotation" id="step3-high-annotation" >
-	    <h4>No matter what type of vehicle you choose. Maybe your next purchase should be less powerful?</h4>
+	    <h4>Countries with </h4>
 		
           </div>
         </div>
@@ -84,6 +84,8 @@
 	var yAxis = d3.svg.axis()
 	    .scale(y)
 	    .orient("left");
+
+		
 
 	// Add the svg canvas
 	var svg = d3.select("#vis-canvas").append("svg")
