--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1>Population vs Income Median Below 50 </h1>
     <h2 class="subtitle">Visualization is based on data from the WDI on population and median income</h2>
     <div id="vis-nav">
-      <a href="#" id="step1" class="step-link active">Viz-Scene 1</a>
-      <a href="#" id="step2" class="step-link">Viz-Scene 2</a>
-      <a href="#" id="step3" class="step-link">Viz-Scene 3</a>
+      <a href="#" id="step1" class="step-link active">Scene 1</a>
+      <a href="#" id="step2" class="step-link">Scene 2</a>
+      <a href="#" id="step3" class="step-link">Scene 3</a>
 
     </div>
     <div id="vis-container">
