--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1>Annual GDP Growth vs Secondary Education, Poverty Ratio and Income Median below 50% </h1>
     <h3 class="subtitle">Visualization is based on data from the WDI of 20 Countries grouped by income groups for 2015, you can hover over the data to filter based on income groups</h3>
     <div id="vis-nav">
-      <a href="#" id="step1" class="step-link active">Education</a>
-      <a href="#" id="step2" class="step-link">Poverty</a>
-      <a href="#" id="step3" class="step-link">Income</a>
+      <a href="#" id="step1" class="step-link active">Education Ratio </a>
+      <a href="#" id="step2" class="step-link">Poverty Ratio </a>
+      <a href="#" id="step3" class="step-link">Income Gap Ratio</a>
 
     </div>
     <div id="vis-container">
