--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <div id="container">
-    <h1>Annual GDP Growth vs Secondary Education, Poverty Ratio and Income Median below 50% </h1>
-    <h3 class="subtitle">Visualization is based on data from the WDI of 20 Countries grouped by income groups for 2015, you can hover over the data to filter based on income groups</h3>
-    <div id="vis-nav">
+    <h1 class="title">Annual GDP Growth vs Secondary Education, Poverty Ratio and Income Gap</h1>
+    <h2 class="subtitle">You can navigate using the tabs below for different scenes and hover over the data points to filter based on Income groups!</h2>
+	<div id="vis-nav">
       <a href="#" id="step1" class="step-link active">Education Ratio </a>
       <a href="#" id="step2" class="step-link">Poverty Ratio </a>
       <a href="#" id="step3" class="step-link">Income Gap Ratio</a>
